# WGPURaytracer

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: CMakeLists.txt  glfw.cmake  glm.cmake  magic_enum.cmake  webgpu.cmake
src/: CMakeLists.txt  app.cpp  app.hpp  config.hpp  config.hpp.in  main.cpp  resource_manager.cpp  resource_manager.hpp  webgpu_impl.cpp  webgpu_utils.cpp  webgpu_utils.hpp
src/shaders/: shader.wgsl
